<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.projectquiz.SummaryActivity">

    <TextView
        android:id="@+id/summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary_text_view"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:textAllCaps="true"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/linear_layout_summary"
        android:layout_below="@+id/summary_text_view"
        android:baselineAligned="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginEnd="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_summary_text_viw"
                android:id="@+id/name_text_view_summary"
                android:gravity="end"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_points_text_view"
                android:gravity="end"
                android:layout_margin="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/sex_summary_text_view"
                android:gravity="end"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/hero"
                android:gravity="end"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/summary_text_view_Layout"
            android:layout_marginStart="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_edit_text_summary"
                android:gravity="start"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/quantity_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/colorGradding"
                android:textStyle="bold"

                android:gravity="start" />

            <TextView
                android:id="@+id/sex_choise_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="start" />
            <TextView
                android:id="@+id/level_of_cooking_summary_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="start"/>

        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="12dp"
        android:scaleType="centerCrop"
        android:id="@+id/summary_ImageView"
        android:layout_below="@id/linear_layout_summary"
        android:adjustViewBounds="true"/>
    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/summary_ImageView"
        android:gravity="center"
        android:text="@string/description_text_view"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:lineSpacingMultiplier="1.2"
        android:layout_marginBottom="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart_button"
        android:onClick="returnReply"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_triangle"
        android:layout_below="@id/description_text_view"/>


</RelativeLayout>