<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.projectquiz.MainActivity">

    <TextView
        android:id="@+id/subject_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/subjcet_text_view"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/subject_text_view"
        android:layout_below="@+id/subject_text_view"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/editText_main"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <RadioGroup
        android:id="@+id/sex_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_main"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/woman_sex_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/descriptio_image_radio_button_woman"
            android:src="@drawable/woman" />


        <RadioButton
            android:id="@+id/men_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSexRadioButton" />


        <TextView
            android:id="@+id/sex_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAllCaps="true"
            android:text="@string/sex_text_view" />


        <RadioButton
            android:id="@+id/woman_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSexRadioButton" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/description_image_radio_button_men"
            android:src="@drawable/man" />

    </RadioGroup>


    <TextView
        android:id="@+id/level_of_cooking_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sex_radio_group"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        android:text="@string/level_of_coking_text_view" />

    <RadioGroup
        android:id="@+id/level_of_cooking_radio_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/level_of_cooking_text_view"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/first_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/second_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="46dp"
            android:layout_marginStart="46dp"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/third_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:onClick="onRadioButtonClicked" />



    </RadioGroup>

    <LinearLayout
        android:id="@+id/level_of_cooking_Linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/level_of_cooking_radio_button"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/dish" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/cook" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/chef" />

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="nextPage"
        android:background="@drawable/shape_triangle"
        android:text="@string/start_button"
        android:padding="8dp"
        android:layout_margin="12dp"
        tools:ignore="RtlHardcoded" />


</RelativeLayout>